partially solves mobile screen sections overlapping, minor styles updates

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
                         /* Overall style */
+    
  
- 
+/* main theme colour in case of adding multiple themes later */
+:root {
+     --colourmaintheme: #98996b;
+}
+
     html, body{
     min-height:100%;
     width:100%;
     background-color: lightgray;
-   
     }
 
     *{ border: 1px solid transparent; }   
@@ -14,7 +18,7 @@ h5{
     font-weight: bolder;
     text-decoration: underline;
     text-align: center;
-}
+ }
 
                           
 /* Links hover effect (required by assigment) */
@@ -22,11 +26,30 @@ a:hover {
     color: red !important;
     }
 
+    /* button style */
+ .btn{
+    background-color: var(--colourmaintheme);
+    width: 20% ;
+    align-self: center ;
+ }
  /* buttons shadow style on hover (required by assigment)*/   
  .btn:hover {
+    background-color: var(--colourmaintheme) !important;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5) !important;
+    width: 30% ;
  }
 
+ .btn:visited {
+    background-color: var(--colourmaintheme) !important;
+    
+ }
+
+ .btn:focus{
+    background-color: var(--colourmaintheme) !important;
+ }
+
+
+ 
 
 
                     /*Section specific styles*/ 
@@ -34,7 +57,7 @@ a:hover {
 
   /* navbar styling */
 .bg-light{
-    background-color: #98996b !important;
+    background-color: var(--colourmaintheme) !important;
 }
 /* navbar links */
 .navbar-nav a {
@@ -84,6 +107,7 @@ a:hover {
 /* height of the section Work */
 #section-work{
    height: 50vh;
+   margin-bottom: 5vh;
     width: 90%;
 
     
@@ -136,14 +160,9 @@ a:hover {
     
 }
 
-/* Link button style */
-.btn {
-    width: 20% ;
-    align-self: center ;
 
-}
 
-                               /* About me \ Sklills (combined on one row as a requirement)*/
+                               /* About me / Skills section (combined on one row as per requirements)*/
 
 
 /* about me section */
@@ -156,7 +175,6 @@ a:hover {
 
 /* height of the section About me/skills */
 #section-skills{
-    max-height: 20vh;
     
     width: 90%;
     
@@ -167,8 +185,12 @@ a:hover {
     background-color: bisque;
 }
 
+
+
 #section-about-me-style{
+   
     background-color:blanchedalmond;
+    text-align: center;
 }
 
 
@@ -197,9 +219,6 @@ a:hover {
     color: red;
 }
 
-
-
-
 #text-footer{
     color: white;
     
@@ -215,3 +234,4 @@ a:hover {
 #section-footer{
     margin-top: 5px;
 }
+
